--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".SplashScreenEarth"
+        <activity
+            android:name=".SplashScreenEarth"
             android:screenOrientation="userPortrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,9 +18,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MenuPrincipal"
-            android:screenOrientation="userPortrait"/>
-        <activity android:name=".SplashScreenText"
+        <activity
+            android:name=".MenuPrincipal"
+            android:screenOrientation="userPortrait" />
+        <activity
+            android:name=".SplashScreenText"
+            android:screenOrientation="userPortrait" />
+        <activity android:name=".PageContinent"
             android:screenOrientation="userPortrait"></activity>
     </application>
 
